# opencv

./: CMakeLists.txt
inc/: OpenCV.h  OpenCVLearning.h  main.h
src/: OpenCV.cpp  main.cpp  test.cpp
